Fixed a bug that was causing assignments marked as completed show up in a diferent session after being previously cleared